# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  gunicorn.conf.py  pyproject.toml
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: test_users.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options.py  0002_alter_statuses_name.py  0003_rename_statuses_status.py  0004_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description.py  0002_alter_task_executor_alter_task_labels.py  0003_alter_task_labels.py  0004_alter_task_options.py
task_manager/templates/: base.html  form.html  index.html  message.html
task_manager/templates/labels/: delete.html  index.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: delete.html  index.html  task.html
task_manager/templates/users/: create.html  createOLD.html  delete.html  index.html  login.html  update.html
task_manager/users/: forms.py  urls.py  views.py
task_manager/users/tests/: test_forms.py  test_models.py  testcase.py
