[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-bootstrap5>=24.3",
    "django-filter>=25.1",
    "django>=5.1.6",
    "python-dotenv>=1.1.0",
    "dj-database-url>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=23.0.0",
]
